--- a/homework_05/templates/base.html
+++ b/homework_05/templates/base.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" >
 
     <title>
@@ -13,22 +11,33 @@
         Base Title
       {% endblock %}
     </title>
-  </head>
-  <body>
 
-    <div class="container">
-      <h1>Base body</h1>
+    <style>
+      html {
+        background: CadetBlue;
+      }
+      body {
+        background: LightSalmon;
+      }
+      h1 {
+        font-size: 1.5em;
+        font-family: "Lucida Console", Monaco, monospace;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="container my-4">
+
+      <h1>
+        {% block body %}
+          Base Body
+        {% endblock %}
+      </h1>
+
     </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
