--- a/homework_05/templates/base.html
+++ b/homework_05/templates/base.html
@@ -27,6 +27,35 @@
   </head>
 
   <body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">App</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+
+            {% for name, label in [
+            ('index', 'Home'),
+            ('about', 'About'),
+            ] %}
+
+              {% set path = url_for(name) %}
+              <li class="nav-item">
+                <a
+                  class="nav-link {{'active' if request.path == path else ''}}"
+                  href="{{ path }}"> {{ label }}
+                </a>
+              </li>
+            {% endfor %}
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="container my-4">
 
       <h1>
