--- a/homework_06/blog-app/templates/list.html
+++ b/homework_06/blog-app/templates/list.html
@@ -5,30 +5,31 @@
 {% endblock %}
 
 {% block body %}
-    <h1>{{ list_name.title() }}</h1>
-    {% if products %}
-        <ul class="list-group">
-            {% for element in elements_list %}
-                <li class="list-group-item">
-                    {{ template = 'user_details' if list_name == 'users' else 'post_details' }}
-                    <a class="text-decoration-none" href="{{ url_for(template, element_id=element.id) }}">
-                        {{ element.name }}
-                    </a>
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <div>
-            <strong>No products</strong>
-        </div>
-    {% endif %}
-
-    <br>
+  <h1>{{ list_name.title() }}</h1>
+  {% if products %}
+    <ul class="list-group">
+      {% for element in elements_list %}
+        <li class="list-group-item">
+          {{ template = 'user_details' if list_name == 'users' else 'post_details' }}
+          {{ name = element.username if list_name == 'users' else element.title }}
+          <a class="text-decoration-none" href="{{ url_for(template, element_id=element.id) }}">
+            {{ name }}
+          </a>
+        </li>
+      {% endfor %}
+    </ul>
+  {% else %}
     <div>
-      {% if list_name == "users" %}
-        <a href="{{ url_for('products_app.add')}}">
-            Add User
-        </a>
-      {% endif %}
+      <strong>No products</strong>
     </div>
+  {% endif %}
+
+  <br>
+  <div>
+    {% if list_name == "users" %}
+      <a href="{{ url_for('add_user')}}">
+        Add User
+      </a>
+    {% endif %}
+  </div>
 {% endblock %}
