add user delete

--- a/homework_06/blog-app/templates/user_details.html
+++ b/homework_06/blog-app/templates/user_details.html
@@ -36,5 +36,19 @@
     </a>
   </div>
 
+  <br>
+  <div>
+    <button
+        type="button"
+        class="btn btn-outline-danger btn-sm"
+        data-bs-toggle="modal"
+        data-bs-target="#modal-del-product"
+        onclick="deleteItem()">
+      Delete user
+    </button>
+  </div>
+
+  <script src="{{ url_for('static', filename='js/delete.js') }}"></script>
+
 
 {% endblock %}
