--- a/homework_06/blog-app/templates/base.html
+++ b/homework_06/blog-app/templates/base.html
@@ -14,10 +14,10 @@
 
     <style>
       html {
-        background: CadetBlue;
+        background: #f6ead4;
       }
       body {
-        background: LightSalmon;
+        background: #b4a284;
       }
       h1 {
         font-size: 1.5em;
@@ -28,35 +28,24 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">App</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-
-            {% for name, label in [
-            ('index', 'Home'),
-            ('about', 'About'),
-            ] %}
-
-              {% set path = url_for(name) %}
-              <li class="nav-item">
-                <a
-                  class="nav-link {{'active' if request.path == path else ''}}"
-                  href="{{ path }}"> {{ label }}
-                </a>
-              </li>
-            {% endfor %}
-
-          </ul>
-        </div>
-      </div>
-    </nav>
-
     <div class="container my-4">
+
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Blog</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="{{ url_for('users') }}">Users</a>
+              <a class="nav-link" href="{{ url_for('posts') }}">Posts</a>
+              <a class="nav-link" href="{{ url_for('add_user') }}">Create user</a>
+            </div>
+          </div>
+        </div>
+      </nav>
 
       <h1>
         {% block body %}
