--- a/homework_06/blog-app/templates/base.html
+++ b/homework_06/blog-app/templates/base.html
@@ -28,25 +28,24 @@
 
   <body>
 
-    <div class="container my-4">
-
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Blog</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="{{ url_for('users') }}">Users</a>
-              <a class="nav-link" href="{{ url_for('posts') }}">Posts</a>
-              <a class="nav-link" href="{{ url_for('add_user') }}">Create user</a>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Blog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link {{'active' if request.path == url_for('index') else ''}}" aria-current="page" href="{{ url_for('index') }}">Index</a>
+            <a class="nav-link {{'active' if request.path == url_for('users') else ''}}" href="{{ url_for('users') }}">Users</a>
+            <a class="nav-link {{'active' if request.path == url_for('posts') else ''}}" href="{{ url_for('posts') }}">Posts</a>
+            <a class="nav-link {{'active' if request.path == url_for('add_user') else ''}}" href="{{ url_for('add_user') }}">Create user</a>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
 
+    <div class="container my-4">
       <h1>
         {% block body %}
           Base Body
