--- a/homework_06/blog-app/templates/add_post.html
+++ b/homework_06/blog-app/templates/add_post.html
@@ -11,10 +11,10 @@
     {{ form.hidden_tag() }}
 
     {{ form.title.label(class='form-label') }}
-    {{ form.title(class='form-control', placeholder='Desktop') }}
+    {{ form.title(class='form-control', placeholder='Some title') }}
 
     {{ form.body.label(class='form-label') }}
-    {{ form.body(class='form-control', placeholder='Desktop') }}
+    {{ form.body(class='form-control', placeholder='Some text') }}
 
     {% if form.errors %}
       <div class="errors my-2">
