--- a/homework_06/blog-app/templates/add_user.html
+++ b/homework_06/blog-app/templates/add_user.html
@@ -11,10 +11,10 @@
     {{ form.hidden_tag() }}
 
     {{ form.username.label(class='form-label') }}
-    {{ form.username(class='form-control', placeholder='Desktop') }}
+    {{ form.username(class='form-control', placeholder='John') }}
 
     {{ form.email.label(class='form-label') }}
-    {{ form.email(class='form-control', placeholder='Desktop') }}
+    {{ form.email(class='form-control', placeholder='john@email.com') }}
 
     {% if form.errors %}
       <div class="errors my-2">
