--- a/homework_06/blog-app/templates/list.html
+++ b/homework_06/blog-app/templates/list.html
@@ -6,12 +6,13 @@
 
 {% block body %}
   <h1>{{ list_name.title() }}</h1>
-  {% if products %}
+
+  {% if elements_list %}
     <ul class="list-group">
       {% for element in elements_list %}
         <li class="list-group-item">
-          {% template = 'user_details' if list_name == 'users' else 'post_details' %}
-          {% name = element.username if list_name == 'users' else element.title %}
+          {% set template = 'user_details' if list_name == 'users' else 'post_details' %}
+          {% set name = element.username if list_name == 'users' else element.title %}
           <a class="text-decoration-none" href="{{ url_for(template, element_id=element.id) }}">
             {{ name }}
           </a>
@@ -20,7 +21,7 @@
     </ul>
   {% else %}
     <div>
-      <strong>No products</strong>
+      <strong>No {{ list_name }}</strong>
     </div>
   {% endif %}
 
