--- a/homework_06/blog-app/templates/user_details.html
+++ b/homework_06/blog-app/templates/user_details.html
@@ -6,18 +6,18 @@
 
 {% block body %}
   <h1>
-    User {{ repr(user.username) }}
+    User {{ user.username }}
   </h1>
 
-  {% user_posts = user.posts %}
+  {% set user_posts = user.posts %}
   {% if user_posts %}
     <h2>
-      {{ repr(user.username) }}'s posts:
+      {{ user.username }}'s posts:
     </h2>
     <ul class="list-group">
       {% for post in user_posts %}
         <li class="list-group-item">
-          <a class="text-decoration-none" href="{{ url_for('post_details', post=post) }}">
+          <a class="text-decoration-none" href="{{ url_for('post_details', element_id=post.id) }}">
             {{ post.title }}
           </a>
         </li>
