--- a/homework_06/blog-app/templates/base.html
+++ b/homework_06/blog-app/templates/base.html
@@ -46,6 +46,17 @@
     </nav>
 
     <div class="container my-4">
+
+      {% with messages = get_flashed_messages(with_categories=True) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            <div class="alert alert-{{ 'primary' if category == 'message' else category }}" role="alert">
+              {{ message }}
+            </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+
       <h1>
         {% block body %}
           Base Body
