--- a/homework_06/blog-app/templates/user_details.html
+++ b/homework_06/blog-app/templates/user_details.html
@@ -42,10 +42,26 @@
         type="button"
         class="btn btn-outline-danger btn-sm"
         data-bs-toggle="modal"
-        data-bs-target="#modal-del-product"
-        onclick="deleteItem()">
+        data-bs-target="#modal-del-product">
       Delete user
     </button>
+  </div>
+
+  <div class="modal fade" id="modal-del-product" tabindex="-1" aria-labelledby="modal-delete-product-label" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <div class="modal-body">
+          Are you sure to delete user {{ user.username }}? All user's posts will be deleted too!
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-danger" onclick="deleteItem()">Delete</button>
+        </div>
+
+      </div>
+    </div>
   </div>
 
   <script src="{{ url_for('static', filename='js/delete.js') }}"></script>
