fix margin for button

--- a/homework_06/blog-app/templates/base.html
+++ b/homework_06/blog-app/templates/base.html
@@ -23,6 +23,9 @@
         font-size: 1.5em;
         font-family: "Lucida Console", Monaco, monospace;
       }
+      button {
+        margin: 4px;
+      }
     </style>
   </head>
 
