add users_list view

--- a/homework_07/blog/blog_django_app/templates/blog/base.html
+++ b/homework_07/blog/blog_django_app/templates/blog/base.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,7 +6,7 @@
 
     {% load static %}
     <link
-        href="{% static 'css/bootstrap.min.css' %}"
+        href="{% static 'blog/css/bootstrap.min.css' %}"
         type="text/css"
         rel="stylesheet"
     />
@@ -32,6 +30,9 @@
       }
       button {
         margin: 4px;
+      }
+       {
+        margin-bottom: 20px;
       }
     </style>
   </head>
@@ -64,7 +65,7 @@
 
     </div>
 
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'blog/js/bootstrap.bundle.min.js' %}"></script>
 
   </body>
 </html>
