add post_details view

--- a/homework_07/blog/blog_django_app/templates/blog/base.html
+++ b/homework_07/blog/blog_django_app/templates/blog/base.html
@@ -47,8 +47,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="#">Users</a>
-            <a class="nav-link" href="#">Posts</a>
+            <a class="nav-link" href="{% url 'blog_django_app:users' %}">Users</a>
+            <a class="nav-link" href="{% url 'blog_django_app:posts' %}">Posts</a>
             <a class="nav-link" href="#">Create user</a>
           </div>
         </div>
