--- a/homework_07/blog/blog_django_app/templates/blog/posts.html
+++ b/homework_07/blog/blog_django_app/templates/blog/posts.html
@@ -5,14 +5,16 @@
 {% endblock %}
 
 {% block body %}
-  <h1>Users: </h1>
+  <h1>Posts: </h1>
 
   {% if posts %}
     <ul class="list-group">
       {% for post in posts %}
         <li class="list-group-item">
           <a class="text-decoration-none">
-            <strong>"{{ post.title }}"</strong>  by {{ post.user.name }}
+            <strong>
+              <a href="{% url 'blog_django_app:post_details' pk=post.id %}">"{{ post.title }}"</a>
+            </strong>  by {{ post.user.name }}
           </a>
         </li>
       {% endfor %}
