--- a/homework_07/blog/blog_django_app/templates/blog/post_details.html
+++ b/homework_07/blog/blog_django_app/templates/blog/post_details.html
@@ -7,7 +7,7 @@
 {% block body %}
   <h1>
     Post "{{ post.title|title }}"
-    by {{ post.user.name }}
+    by <a href="{% url 'blog_django_app:user_details' pk=post.user.id %}">{{ post.user.name }}</a>
   </h1>
 
   <div>
