--- a/homework_07/blog/blog_django_app/templates/blog/users.html
+++ b/homework_07/blog/blog_django_app/templates/blog/users.html
@@ -11,7 +11,7 @@
     <ul class="list-group">
       {% for user in users %}
         <li class="list-group-item">
-          <a class="text-decoration-none">
+          <a class="text-decoration-none" href="{% url 'blog_django_app:user_details' pk=user.id %}">
             {{ user.name }}
           </a>
         </li>
