--- a/homework_08/blog/blog_django_app/templates/blog/user_details.html
+++ b/homework_08/blog/blog_django_app/templates/blog/user_details.html
@@ -6,17 +6,17 @@
 
 {% block body %}
   <h1>
-    User {{ user.name }}
+    User {{ user.username }}
   </h1>
 
   <div>
-    <strong>About {{ user.name }}</strong>:
+    <strong>About {{ user.username }}</strong>:
     <p>{{ user.about }}</p>
   </div>
 
   {% if user_posts %}
     <h2>
-      {{ user.name }}'s posts:
+      {{ user.username }}'s posts:
     </h2>
     <ul class="list-group">
       {% for post in user_posts %}
