links to buttons

--- a/homework_08/blog/blog_django_app/templates/blog/post_details.html
+++ b/homework_08/blog/blog_django_app/templates/blog/post_details.html
@@ -15,6 +15,9 @@
   </div>
 
   <br>
-  <a href="{% url 'blog_django_app:posts' %}">All posts.</a>
+  <div>
+    <a class="btn btn-dark" href="{% url 'blog_django_app:posts' %}">All posts.</a>
+  </div>
+
 
 {% endblock %}
