--- a/homework_08/blog/blog_django_app/templates/blog/user_details.html
+++ b/homework_08/blog/blog_django_app/templates/blog/user_details.html
@@ -34,6 +34,9 @@
   {% endif %}
 
   <br>
-  <a href="{% url 'blog_django_app:users' %}">All users.</a>
+  <div>
+    <a class="btn btn-dark" href="{% url 'blog_django_app:users' %}">All users.</a>
+  </div>
+
 
 {% endblock %}
