--- a/homework_09/blog/blog_django_app/templates/blog/base.html
+++ b/homework_09/blog/blog_django_app/templates/blog/base.html
@@ -45,6 +45,7 @@
           <div class="navbar-nav">
             <a class="nav-link" href="{% url 'blog_django_app:users' %}">Users</a>
             <a class="nav-link" href="{% url 'blog_django_app:posts' %}">Posts</a>
+            <a class="nav-link" href="{% url 'blog_django_app:post_creation' %}">Create post</a>
           </div>
         </div>
       </div>
