--- a/homework_09/blog/blog_django_app/templates/blog/posts.html
+++ b/homework_09/blog/blog_django_app/templates/blog/posts.html
@@ -25,4 +25,10 @@
     </div>
   {% endif %}
 
+  <hr>
+  <div>
+    <a href="{% url 'blog_django_app:post_creation' %}">Create a new post.</a>
+    _
+  </div>
+
 {% endblock %}
