--- a/homework_09/blog/blog_django_app/templates/base.html
+++ b/homework_09/blog/blog_django_app/templates/base.html
@@ -46,13 +46,19 @@
             <a class="nav-link" href="{% url 'blog_django_app:users' %}">Users</a>
             <a class="nav-link" href="{% url 'blog_django_app:posts' %}">Posts</a>
             <a class="nav-link" href="{% url 'blog_django_app:post_creation' %}">Create post</a>
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+            {% if request.user.is_authenticated  %}
+              <a class="nav-link me-2" href="{% url 'logout' %}">Logout</a>
+            {% else %}
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            {% endif %}
           </div>
         </div>
       </div>
     </nav>
 
     <div class="container my-4">
-      {% block body %}
+      {% block content %}
           Base Body
       {% endblock %}
     </div>
