--- a/homework_09/blog/blog_django_app/templates/blog/post_confirm_delete.html
+++ b/homework_09/blog/blog_django_app/templates/blog/post_confirm_delete.html
@@ -1,10 +1,10 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}
   Delete post {{ post.title }}
 {% endblock %}
 
-{% block body %}
+{% block content %}
   <h1>Delete post <strong>"{{ post.title }}"</strong>?</h1>
   <form method="post">
     {% csrf_token %}
