--- a/homework_09/blog/blog_django_app/templates/blog/post_creation.html
+++ b/homework_09/blog/blog_django_app/templates/blog/post_creation.html
@@ -1,10 +1,10 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}
   Create Post
 {% endblock %}
 
-{% block body %}
+{% block content %}
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
