--- a/homework_09/blog/blog_django_app/templates/blog/post_details.html
+++ b/homework_09/blog/blog_django_app/templates/blog/post_details.html
@@ -1,10 +1,10 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}
   Post #{{ post.id }}
 {% endblock %}
 
-{% block body %}
+{% block content %}
   <h1>
     Post "{{ post.title|title }}"
     by <a href="{% url 'blog_django_app:user_details' pk=post.user.id %}">{{ post.user.username }}</a>
