--- a/homework_09/blog/blog_django_app/templates/blog/posts.html
+++ b/homework_09/blog/blog_django_app/templates/blog/posts.html
@@ -1,10 +1,10 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}
   Posts List
 {% endblock %}
 
-{% block body %}
+{% block content %}
   <h1>Posts: </h1>
 
   {% if post_list %}
