--- a/homework_09/blog/blog_django_app/templates/blog/user_details.html
+++ b/homework_09/blog/blog_django_app/templates/blog/user_details.html
@@ -1,10 +1,10 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}
   User #{{ user.id }}
 {% endblock %}
 
-{% block body %}
+{% block content %}
   <h1>
     User {{ user.username }}
   </h1>
